--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "draftjs-utils",
-  "version": "0.2.5",
+  "version": "0.2.7",
   "description": "Collection of utility function for use with Draftjs.",
   "main": "lib/index.js",
   "peerDependencies": {
@@ -27,6 +27,8 @@
     "flow-bin": "^0.30.0",
     "immutable": "^3.8.1",
     "mocha": "^3.0.2",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.5",
     "webpack": "^1.13.2"
