--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
   "name": "draftjs-utils",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Collection of utility function for use with Draftjs.",
   "main": "lib/index.js",
   "peerDependencies": {
-    "draft-js": "^0.8.1",
-    "immutable": "^3.8.1"
+    "draft-js": "^0.x.x",
+    "immutable": "^3.x.x"
   },
   "devDependencies": {
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.11.6",
+    "babel-plugin-transform-flow-strip-types": "^6.14.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.16.3",
     "chai": "^3.5.0",
-    "draft-js": "^0.8.1",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-plugin-import": "1.13.0",
-    "eslint-plugin-jsx-a11y": "^2.1.0",
-    "eslint-plugin-mocha": "^4.3.0",
-    "eslint-plugin-react": "^6.1.2",
-    "flow-bin": "^0.30.0",
+    "draft-js": "^0.9.1",
+    "enzyme": "^2.5.1",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-mocha": "^4.7.0",
+    "eslint-plugin-react": "^6.4.1",
+    "flow-bin": "^0.33.0",
     "immutable": "^3.8.1",
-    "mocha": "^3.0.2",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0",
+    "mocha": "^3.1.2",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "rimraf": "^2.5.4",
-    "sinon": "^1.17.5",
+    "sinon": "^1.17.6",
     "webpack": "^1.13.2"
   },
   "repository": {
