--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "immutable": "^3.x.x"
   },
   "peerDependencies": {
-    "draft-js": "^0.9.x"
+    "draft-js": "0.9.x || 0.10.x"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
