--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
   "name": "draftjs-utils",
-  "version": "0.8.07",
+  "version": "0.8.08",
   "description": "Collection of utility function for use with Draftjs.",
   "main": "lib/draftjs-utils.js",
   "peerDependencies": {
     "draft-js": "^0.10.x",
-    "immutable": "^3.x.x || 4.x.x"
+    "immutable": "3.x.x || 4.x.x"
   },
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^7.1.1",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "chai": "^4.1.0",
-    "draft-js": "^0.10.0",
-    "immutable": "^3.x.x",
-    "enzyme": "^2.7.1",
-    "eslint": "^4.3.0",
-    "eslint-config-airbnb": "^15.0.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "draft-js": "^0.10.3",
+    "immutable": "^3.8.2",
+    "enzyme": "^3.1.0",
+    "eslint": "^4.8.0",
+    "eslint-config-airbnb": "^16.0.0",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-mocha": "^4.8.0",
-    "eslint-plugin-react": "^7.1.0",
-    "flow-bin": "^0.51.0",
-    "immutable": "^3.x.x",
-    "jsdom": "^11.1.0",
-    "mocha": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "rimraf": "^2.6.1",
-    "sinon": "^2.3.8",
-    "webpack": "^3.3.0"
+    "eslint-plugin-mocha": "^4.11.0",
+    "eslint-plugin-react": "^7.4.0",
+    "flow-bin": "^0.56.0",
+    "jsdom": "^11.3.0",
+    "mocha": "^4.0.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "rimraf": "^2.6.2",
+    "sinon": "^4.0.1",
+    "webpack": "^3.6.0"
   },
   "repository": {
     "type": "git",
