--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.9.4",
   "description": "Collection of utility function for use with Draftjs.",
   "main": "lib/draftjs-utils.js",
+  "types": "lib/draftjs-utils.d.ts",
   "peerDependencies": {
     "draft-js": "^0.10.x",
     "immutable": "3.x.x || 4.x.x"
