--- a/package.json
+++ b/package.json
@@ -4,35 +4,38 @@
   "description": "Collection of utility function for use with Draftjs.",
   "main": "lib/draftjs-utils.js",
   "peerDependencies": {
-    "draft-js": "^0.10.x",
+    "draft-js": "^0.11.x",
     "immutable": "3.x.x || 4.x.x"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.3",
-    "babel-loader": "^7.1.2",
+    "@babel/core": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/preset-react": "^7.7.4",
+    "@babel/register": "^7.7.4",
+    "autoprefixer": "^9.7.3",
+    "babel-eslint": "^10.0.3",
+    "babel-loader": "^8.0.6",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "draft-js": "^0.10.4",
+    "enzyme": "^3.10.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-mocha": "^6.2.2",
+    "eslint-plugin-react": "^7.17.0",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "flow-bin": "^0.113.0",
     "immutable": "^3.8.2",
-    "enzyme": "^3.2.0",
-    "eslint": "^4.12.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-mocha": "^4.11.0",
-    "eslint-plugin-react": "^7.5.1",
-    "flow-bin": "^0.60.1",
-    "jsdom": "^11.5.1",
-    "mocha": "^4.0.1",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "rimraf": "^2.6.2",
-    "sinon": "^4.1.2",
-    "webpack": "^3.9.1"
+    "jsdom": "^15.2.1",
+    "mocha": "^6.2.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "rimraf": "^3.0.0",
+    "sinon": "^7.5.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   },
   "repository": {
     "type": "git",
@@ -40,11 +43,9 @@
   },
   "scripts": {
     "clean": "rimraf lib",
-    "build:webpack":
-      "NODE_ENV=production webpack --config config/webpack.prod.config.js",
+    "build:webpack": "NODE_ENV=production webpack --mode production --config config/webpack.prod.config.js",
     "build": "npm run clean && npm run build:webpack",
-    "test":
-      "mocha --compilers js:config/test-compiler.js config/test-setup.js js/**/*Test.js",
+    "test": "mocha --require config/test-compiler.js config/test-setup.js js/**/*Test.js",
     "lint": "eslint js",
     "flow": "flow; test $? -eq 0 -o $? -eq 2",
     "check": "npm run lint && npm run flow"
